--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,10 @@ loader_version=0.16.12
 
 # Mod Properties
 mod_version=0.1.0
-maven_group=com.example
-archives_base_name=addon-template
+maven_group = com.plodroid.meteoraddon
+archives_base_name = PlodroidsMeteorAddon
+
+
 
 # Dependencies
+
